# json-excel-converter

./: .gitignore  Dockerfile  pyproject.toml
json_excel_api/: api.py  config.py  dependencies.py  main.py  model.py
json_excel_api/models/: model.py
json_excel_api/routers/: excel.py
json_excel_api/utils/: __init__.py
json_excel_converter/xlsx/: __init__.py  formats.py
tests/: test_api.py
tests/examples/: request1.json
