[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "json_excel_converter"
version = "2.0.0"
description = "JSON to excel convertor"
authors = [ "Mirek Simek <miroslav.simek@vscht.cz>", "Javier Martínez <javiermartinezalvarez98@gmail.com>"]
include = [ "tox.ini", "poetry.lock",]
exclude = [ ]
readme = "README.md"
homepage = 'https://github.com/jaluma/json-excel-converter'
repository = 'https://github.com/jaluma/json-excel-converter'
keywords = [ 'json', 'excel', 'csv', 'xlsxwriter' ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
xlsxwriter = { version = "^1.2", optional = true }
fastapi = "0.68.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.extras]
xlsxwriter = ['xlsxwriter']

[tool.poetry.scripts]


[tool.taskipy.tasks]
dev = "uvicorn json_excel_api.api:app --reload"

[tool.poetry.dev-dependencies]
pytest = "^5"
pytest-cov = "^2.8.1"
pytest-pep8 = "^1.0.6"
md_toc = "^6.0.2"
